Stop unwanted vertical scrollbars on table-container

--- a/stylesheets/_component.tables.scss
+++ b/stylesheets/_component.tables.scss
@@ -147,6 +147,7 @@
 .table-container {
     margin-bottom: 24px;
     overflow-x: auto;
+    overflow-y: hidden;
     position: relative;
 
     .table {
